# ecomap-creator

./: .gitignore  API_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  DATA_CONVERSION_RULES.md  LICENSE  PHASE2_README.md  PUBLICATION_CHECKLIST.md  QUICK_START_PUBLICATION.md  README.md  TECHNICAL_SPEC.md  USAGE_GUIDE.md  ecomap_creator.py  package.sh  pyproject.toml  sample_data_creator.py  schema.json  template_creator.py
modules/: __init__.py  date_converter.py  excel_reader.py  html_generator.py  interactive_dialog.py  node_generator.py  relation_generator.py  validator.py
openspec/changes/complete-claude-skill-integration/: design.md  proposal.md  tasks.md
openspec/changes/complete-claude-skill-integration/specs/interactive-dialog/: spec.md
openspec/changes/complete-claude-skill-integration/specs/skill-metadata/: spec.md
openspec/changes/complete-claude-skill-integration/specs/uv-integration/: spec.md
samples/: sample_case_01.json  sample_case_02.json  sample_case_03.json
templates/: template.xlsx
tests/: test_date_converter.py  test_interactive_dialog.py
