[project]
name = "ecomap-creator"
version = "1.1.0"
description = "知的障害・精神障害のある方の支援情報を一元管理し、視覚的なエコマップとして表示するスキル"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Kazumasa Kawahara", email = "12345678+kazumasakawahara@users.noreply.github.com" }
]
keywords = ["ecomap", "disability-support", "social-work", "visualization", "claude-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.0.0",
]

[project.scripts]
ecomap-creator = "ecomap_creator:main"

[project.urls]
Homepage = "https://github.com/kazumasakawahara/ecomap-creator"
Documentation = "https://github.com/kazumasakawahara/ecomap-creator/blob/main/SKILL.md"
Repository = "https://github.com/kazumasakawahara/ecomap-creator"
Issues = "https://github.com/kazumasakawahara/ecomap-creator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[tool.hatch.build.targets.sdist]
include = [
    "/ecomap_creator.py",
    "/modules",
    "/templates",
    "/samples",
    "/schema.json",
    "/SKILL.md",
    "/README.md",
    "/DATA_CONVERSION_RULES.md",
    "/USAGE_GUIDE.md",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
